@startuml
skinparam classAttributeIconSize 0

class AdminUser {
  - id : INTEGER
  - email : VARCHAR(140)
  - senha_hash : VARCHAR(255)
}

class Cliente {
  - id : INTEGER
  - nome : VARCHAR(120)
  - cpf : VARCHAR(11)
  - senha_hash : VARCHAR(255)
  - criado_em : DATETIME
  - atualizado_em : DATETIME
}

class Produto {
  - id : INTEGER
  - nome : VARCHAR(100)
  - descricao : TEXT
  - preco_unit : NUMERIC(10, 2)
  - estoque : INTEGER
  - imagem : VARCHAR(200)
  - criado_em : DATETIME
  - atualizado_em : DATETIME
}

class Venda {
  - id : INTEGER
  - cliente_id : INTEGER
  - criado_em : DATETIME
  - total : NUMERIC(10, 2)
}

class VendaItem {
  - id : INTEGER
  - venda_id : INTEGER
  - produto_id : INTEGER
  - quantidade : INTEGER
  - preco_unit : NUMERIC(10, 2)
}

Venda --> Cliente
VendaItem --> Venda
VendaItem --> Produto
@enduml